Fixed some grid layout overlap issues with "group-leave" and "person"

--- a/styles/groupStyle.css
+++ b/styles/groupStyle.css
@@ -88,13 +88,13 @@ h5 {
     display: grid;
     width: 100%;
     padding-right: 1em;
-    grid-template-columns: 10% 10% 10% 30% 27% 15%;
+    grid-template-columns: 5% 5% 5% 5% 5% 5% 15% 15% 13% 7% 7% 7% 8%;
     grid-template-rows: 25% 20% 40% 10%;
     grid-template-areas:
-        "exit title title title title participants"
-        "type type type building time time"
-        "description description description description description description"
-        "extra extra extra extra leave extra2"
+        "exit exit title title title title title title title title title participants participants"
+        "type type type type type building building building time time time time time"
+        "description description description description description description description description description description description description description"
+        "extra extra extra extra extra extra extra extra extra extra leave leave leave"
 }
 
 #exitButton {
@@ -135,8 +135,8 @@ h5 {
 
 #person {
     position: relative;
-    top: 8%;
-    left: 3%;
+    top: 5px;
+    left: 2px;
     font-size: 16pt;
 }
 
@@ -170,9 +170,9 @@ h5 {
     grid-area: leave;
     text-decoration: underline;
     font-size: 10pt;
-    position: relative;
-    top: 55%;
-    left: 80%;
+    
+    text-align: center;
+    
     cursor: pointer;
 }
 
